[Stable] [GTK] GdiObject.h missing in WebKitGTK 2.4.1 tarball https://bugs.webkit.org/show_bug.cgi?id=132814

Patch by Milan Crha <mcrha@redhat.com> on 2014-05-25
Reviewed by Carlos Garcia Campos.

Source/WebCore:

Add missing files and includes to fix the mingw32 build.

* GNUmakefile.list.am:
* platform/graphics/win/GraphicsContextCairoWin.cpp:

Source/WTF:

Add missing files to fix the mingw32 build.

* GNUmakefile.list.am: